--- a/py-doc-to-xml/requirements.txt
+++ b/py-doc-to-xml/requirements.txt
@@ -15,6 +15,8 @@ lxml==4.8.0
     #   simplify-docx
 more-itertools==7.0.0
     # via simplify-docx
+pydantic==1.9.0
+    # via -r .\requirements.in
 python-docx==0.8.10
     # via simplify-docx
 simplify-docx==0.1.1
@@ -25,5 +27,7 @@ six==1.16.0
     #   simplify-docx
 typer==0.4.0
     # via -r .\requirements.in
+typing-extensions==4.1.1
+    # via pydantic
 wincertstore==0.2
     # via simplify-docx
