--- a/py-doc-to-xml/requirements.txt
+++ b/py-doc-to-xml/requirements.txt
@@ -4,8 +4,10 @@
 #
 #    pip-compile requirements.in
 #
-click==8.1.0
-    # via typer
+click==8.0.4
+    # via
+    #   -r requirements.in
+    #   typer
 lxml==4.8.0
     # via -r requirements.in
 pydantic==1.9.0
