Remove command line exclude - it is in project.toml

--- a/py-doc-to-xml/tox.ini
+++ b/py-doc-to-xml/tox.ini
@@ -20,7 +20,7 @@ skipsdist = true
 deps =
     -r{toxinidir}/dev-requirements.txt
 commands =
-    mypy {toxinidir} --exclude '^semantic_domain.*\.py'
+    mypy {toxinidir}
 
 [testenv:lint]
 deps =
