--- a/py-doc-to-xml/pyproject.toml
+++ b/py-doc-to-xml/pyproject.toml
@@ -14,5 +14,5 @@ target-version = ["py38", "py39", "py310"]
 profile = "black"
 line_length = 99
 force_sort_within_sections = true
-src_paths = ["src/fact"]
+src_paths = ["docx_to_xml"]
 skip_gitignore = true
