Update from review

--- a/py-doc-to-xml/tox.ini
+++ b/py-doc-to-xml/tox.ini
@@ -3,7 +3,6 @@ max-line-length = 99
 extend-ignore = E203
 extend-exclude =
     venv
-    .tox
     semantic_domain.py
     semantic_domain_subs.py
 extend-immutable-calls =
@@ -20,7 +19,7 @@ skipsdist = true
 deps =
     -r{toxinidir}/dev-requirements.txt
 commands =
-    mypy {toxinidir}
+    mypy main.py docx_to_xml
 
 [testenv:lint]
 deps =
