Update requirements.in and requirements.txt
@refs/pull/18/merge is not longer available; John's PR has been merged
into master.

--- a/py-doc-to-xml/requirements.in
+++ b/py-doc-to-xml/requirements.in
@@ -4,7 +4,7 @@ typer
 
 # Parsing.
 # TODO: Add as a normal PyPI dependency one a new release is published.
-git+https://github.com/microsoft/Simplify-Docx.git@refs/pull/18/merge
+git+https://github.com/microsoft/Simplify-Docx.git
 pydantic
 
 # GenerateDS Output Dependencies
