--- a/py-doc-to-xml/tox.ini
+++ b/py-doc-to-xml/tox.ini
@@ -17,6 +17,7 @@ skipsdist = true
 
 [testenv:type-check]
 deps =
+    -r{toxinidir}/requirements.txt
     -r{toxinidir}/dev-requirements.txt
 commands =
     mypy main.py docx_to_xml
